--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Testing Yahoo Query Language</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="jquery-2.1.4.min.js"></script>
+    <script src="~/Scripts/jquery-2.1.4.min.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
