query reformulada e estrutura de input feita

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>TypeScript HTML App</h1>
+    <h1>Offline Web Reader</h1>
     <h2>Construção de Sistemas</h2>
 
-    <div id="content"></div>
+    <div id="inputurl"></div>
+    <div id="greeter"></div>
 
     <div id="yqlResponse"></div>
 </body>
