--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Testing Yahoo Query Language</title>
-    <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="app.js"></script><script src="app.js"></script>
+    <title>Offline Web Reader</title>
+    <link rel="stylesheet" href="./assets/stylesheets/app.css" type="text/css" />
 </head>
 <body>
     <h1>Offline Web Reader</h1>
     <h2>Construção de Sistemas</h2>
-
     <div id="inputurl"></div>
     <div id="greeter"></div>
-
     <div id="yqlResponse"></div>
+
+    <script src="./assets/javascript/app.js"></script>
 </body>
 </html>
