--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <link rel="stylesheet" href="./assets/stylesheets/app.css" type="text/css" />
 </head>
 <body>
-    <h1>Offline Web Reader</h1>
-    <h2>Construção de Sistemas</h2>
-    <div id="inputurl"></div>
-    <div id="greeter"></div>
-    <div id="yqlResponse"></div>
+	<div class="container">
+    	<h1>> Offline Web Reader</h1>
+    	<div id="fanfiction">
+			<label for="fanfiction--description">Fanfiction URL</label>
+			<input type="text" id="fanfiction--input" name="pub_url" placeholder="Type here your Fanfiction URL">
+    	</div>
+    	<div id="greeter">
+    		<input type="submit" id="greeter--btn" value="Get!" class="flat-button">
+    	</div>
+    	<div id="yqlResponse"></div>
+    </div>
 
     <script src="./assets/javascript/app.js"></script>
 </body>
